--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "acosta-repuesto",
   "version": "0.1.0",
@@ -14,6 +15,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
+    "vue-input-autowidth": "^1.0.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -23,7 +25,7 @@
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "^4.1.1",
+    "@vue/cli-service": "^4.5.12",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
